--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <div class="main">
         <nav>
             <span><img width="53" src="assets/images/logo.svg" alt=""></span>
-            <div>
+            <div >
                 <button class="btn">English</button>
                 <button class="btn btn-red-sm">Sign In </button>
             </div>
         </nav>
-        <div class="box">
-        </div>
+        <!-- <div class="box">
+            sdfnjkfbfbb
+        </div> -->
         <div class="hero">
-
-            <span>Enjoy big movies, hit series and more from ₹ 149.</span>
-            <span>Join today. Cancel anytime.</span>
-            <span>Ready to watch? Enter your email to create or restart your membership.</span>
+            <div>Enjoy big movies, hit series and more from ₹ 149.</div>
+            <div>Join today. Cancel anytime.</div>
+            <div>Ready to watch? Enter your email to create or restart your membership.</div>
             <div class="hero-buttons">
                 <input type="text" placeholder="Email Address">
                 <button class="btn btn-red">Get Started &gt;</button>
@@ -32,14 +32,18 @@
         </div>
 
         <!-- <div class="separation"></div> -->
-
     </div>
 
     <div class="separation"></div>
     <section class="first">
         <div>
-            <span>Enjoy on your TV</span>
-            <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
+            <span style="
+                    font-size: 60px;
+                ">Enjoy on your TV</span> <br>
+            <span style="
+                    font-size: x-large;
+                    font-weight: 100;
+                ">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
         </div>
 
         <div class="secImg">
@@ -57,8 +61,12 @@
 
         </div>
         <div>
-            <span>Download your shows to watch offline</span>
-            <span>Save your favourites easily and always have something to watch.</span>
+            <span style="
+            font-size: 60px;
+        ">Download your shows to watch offline</span>
+            <span style="
+            font-size: x-large;
+            font-weight: 100;">Save your favourites easily and always have something to watch.</span>
         </div>
     </section>
 
@@ -66,8 +74,13 @@
     <div class="separation"></div>
     <section class="first third">
         <div>
-            <span>Watch everywhere</span>
-            <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
+            <span style="
+            font-size: 60px;
+        ">Watch everywhere</span>
+            <span style="
+            font-size: x-large;
+            font-weight: 100;
+        ">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
         </div>
 
         <div class="secImg">
@@ -85,8 +98,13 @@
                 alt="">
         </div>
         <div>
-            <span>Create profiles for kids</span>
-            <span>Send children on adventures with their favourite characters in a space made just for them—free with
+            <span style="
+            font-size: 60px;
+        ">Create profiles for kids</span>
+            <span style="
+            font-size: x-large;
+            font-weight: 100;
+        ">Send children on adventures with their favourite characters in a space made just for them—free with
                 your membership.</span>
         </div>
     </section>
@@ -178,6 +196,7 @@
                 <a href="faq">Investor Relation</a>
                 <a href="faq">Investor Relation</a>
             </div>
+        </div>
     </footers>
 </body>
 
