--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div>Join today. Cancel anytime.</div>
             <div>Ready to watch? Enter your email to create or restart your membership.</div>
             <div class="hero-buttons">
-                <input type="text" placeholder="Email Address">
+               <!-- <input type="text" placeholder="Email Address"> -->
                 <button class="btn btn-red">Get Started &gt;</button>
             </div>
         </div>
